homework_1_2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trt-service
spec:
  selector:
    app: simple-deployment-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
