homework_1_2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trt-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /trt($|/)(.*)
            pathType: Prefix
            backend:
              service:
                name: trt-service
                port:
                  number: 9000
